--- a/Connection/templates/AlbumView.html
+++ b/Connection/templates/AlbumView.html
@@ -30,6 +30,6 @@
             {% endfor %}
         </tbody>
     </table>
-   <button><a href="/albumView/{{cr.AlbumID}}">CANCEL</a></button>
+   <button><a href="/artistAlbums/{{cr.ArtistID}}">BACK</a></button>
 
 </body>
