--- a/Connection/templates/SongList.html
+++ b/Connection/templates/SongList.html
@@ -23,7 +23,7 @@
        <tbody>
             {% for cr in cr %}
                 <tr>
-                    <td>{{ cr.SongTitle }}</th>
+                    <td>{{ cr.SongTitle }}</td>
                     <td>{{ cr.Genre }}</td>
                     <td>{{ cr.BPM }}</td>
          <td><a href='deleteSong/{{cr.SongTitle}}/{{cr.PlaylistName}}/{{cr.PlaylistID}}'>Delete</a></td>
