--- a/Connection/templates/PlaylistList.html
+++ b/Connection/templates/PlaylistList.html
@@ -12,6 +12,10 @@
 
 
 <body>
+
+    <!-- Search For Songs and Albums-->
+    <button><a href="/search">Search For songs and albums</a></button>
+
     <table class="table">
         <thead>
             <tr>
