Finished Search For Song

--- a/Connection/templates/AlbumView.html
+++ b/Connection/templates/AlbumView.html
@@ -30,6 +30,6 @@
             {% endfor %}
         </tbody>
     </table>
-   <button><a href="/artistAlbums/{{cr.ArtistID}}">BACK</a></button>
+   <button><a href="/search">BACK</a></button>
 
 </body>
