--- a/Connection/templates/ArtistAlbums.html
+++ b/Connection/templates/ArtistAlbums.html
@@ -30,6 +30,6 @@
             {% endfor %}
         </tbody>
     </table>
-   <button><a href="/artistAlbums/{{cr.ArtistID}}">HOME</a></button>
+   <button><a href="/search">HOME</a></button>
 
 </body>
