Search Albums and Artists

--- a/Connection/templates/Search.html
+++ b/Connection/templates/Search.html
@@ -14,12 +14,12 @@
  
 <body>
     
-    <h2>Search For Albums and Songs</h2>
+    <h2>Search For Albums, Songs, and Artists</h2>
  
     <form action="" method = "POST">
         <div class="form-group row">
         <div class="form-group row">
-            <label for="title">Song Name</label>
+            <label for="title">Song, Album, or Artist Name</label>
             <input type="text" class="form-control" name="ItemName" id="ItemName" >
         </div>
 
