Adding songs to playlist, DBA commands

--- a/Connection/templates/SongList.html
+++ b/Connection/templates/SongList.html
@@ -31,7 +31,7 @@
             {% endfor %}
         </tbody>
     </table>
-   <button><a href="/addSong/{{cr.PlaylistID}}">ADD SONG</a></button>
-   <button><a href="/updatePlaylist/{{cr.PlaylistID}}">CANCEL</a></button>
+   <button><a href="/addSong/{{play}}">ADD SONG</a></button>
+   <button><a href="/updatePlaylist/{{play}}">CANCEL</a></button>
 
 </body>
