--- a/Connection/templates/AddPlaylist.html
+++ b/Connection/templates/AddPlaylist.html
@@ -3,12 +3,7 @@
 <head>
     <title>Playlist Details</title>
     
-    <link rel="stylesheet" crossorigin="anonymous"
-   href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
-    
-   <script crossorigin="anonymous"
-   src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" >
-   </script>
+    <link rel="stylesheet" crossorigin="anonymous" href="{{ url_for('static',filename='style.css')}}">
  
 </head>
  
