--- a/Connection/templates/UpdatePlaylist.html
+++ b/Connection/templates/UpdatePlaylist.html
@@ -3,12 +3,8 @@
 <head>
     <title>updatePlaylist</title>
     
-    <link rel="stylesheet" crossorigin="anonymous"
-   href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
-    
-   <script crossorigin="anonymous"
-   src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" >
-   </script>
+    <link rel="stylesheet" crossorigin="anonymous" href="{{ url_for('static',filename='style.css')}}">
+
  
 </head>
  
@@ -21,8 +17,8 @@
             <input type="text" class="form-control" name="PlaylistName" id="PlaylistName" value="{{ tip.PlaylistName }}">
         </div>
         <button type="btnAdd" class="btn btn-primary">Submit</button>
-        <a href='/songManage/{{tip.PlaylistId}}'>Manage Songs</a>
-        <a href="/list" class="btn btn-primary">Cancel</a>
+        <button> <a href='/songManage/{{tip.PlaylistId}}'>Manage Songs</a></button>
+        <button><a href="/list" class="btn btn-primary">Cancel</a></button>
       </form>
 </body>
 </html>
