Finished Add to Playlist

--- a/Connection/templates/AlbumView.html
+++ b/Connection/templates/AlbumView.html
@@ -107,6 +107,6 @@
             {% endfor %}
         </tbody>
     </table>
-   <button><a href="/search">BACK</a></button>
+   <button><a href="/search2">BACK</a></button>
 
 </body>
