--- a/Connection/templates/PlaylistList.html
+++ b/Connection/templates/PlaylistList.html
@@ -85,11 +85,11 @@ a:hover {
     <h1>Welcome, {{ user.Name }} !</h1>
 
     <!-- Search For Songs and Albums-->
-    <h3>Search For Songs, Albums, and Artists</h3>
-    <button><a href="/search">Search</a></button>
+    <h2>Search For Songs, Albums, and Artists</h2>
+    <button><a href="/search2">Search</a></button>
+    
 
-
-    <h3>My Playlists:</h3>
+    <h2>My Playlists:</h2>
     <table class="table">
         <thead>
             <tr>
