--- a/Connection/templates/ArtistAlbums.html
+++ b/Connection/templates/ArtistAlbums.html
@@ -107,6 +107,6 @@
             {% endfor %}
         </tbody>
     </table>
-   <button><a href="/search">HOME</a></button>
+   <button><a href="/search2">HOME</a></button>
 
 </body>
