--- a/Connection/templates/SimilarSongs.html
+++ b/Connection/templates/SimilarSongs.html
@@ -95,13 +95,10 @@ a:hover {
         <thead>
             <tr>
             <th scope="col">Title</th>
-            <th scope="col">Artist</th>
-            <th scope="col">Album</th>
             <th scope="col">Genre</th>
             <th scope="col">Length</th>
 
-            <th scope="col">    </th>
-            <th scope="col">    </th>
+            <th scope="col">BPM</th>
             
 
             </tr>
