--- a/Connection/templates/AdminAddSong.html
+++ b/Connection/templates/AdminAddSong.html
@@ -14,17 +14,14 @@
         <!-- Login Form -->
         <form action="" method="POST">
             <h2>Song</h2>
-            <label for="ArtistID">ArtistID</label>
-            <input type="text" class="form-control" name="ArtistID" id="ArtistID" required>
-    
-            <label for="SongID">SongID</label>
-            <input type="text" class="form-control" name="SongID" id="SongID" required>
+            <label for="ArtistID">ArtistName</label>
+            <input type="text" class="form-control" name="ArtistName" id="ArtistName" required>
 
             <label for="SongTitle">SongTitle</label>
             <input type="text" class="form-control" name="SongTitle" id="SongTitle" required>
 
-            <label for="AlbumID">AlbumID</label>
-            <input type="text" class="form-control" name="AlbumID" id="AlbumID" required>
+            <label for="AlbumName">AlbumName</label>
+            <input type="text" class="form-control" name="AlbumName" id="AlbumName" required>
 
             <label for="Genre">Genre</label>
             <input type="text" class="form-control" name="Genre" id="Genre" required>
