--- a/Connection/templates/SimilarSongs.html
+++ b/Connection/templates/SimilarSongs.html
@@ -110,8 +110,8 @@ a:hover {
                     <td>{{ song.Genre }}</td>
                     <td>{{ song.Length }}</td>
                     <td>{{ song.BPM }}</td>
-                    <td><a href='albumView/{{song.AlbumID}}'>View Album</a></td>
-                    <td><a href='artistAlbums/{{song.ArtistID}}'>View Artist</a></td>
+                    <td><a href='/albumView/{{song.AlbumID}}'>View Album</a></td>
+                    <td><a href='/artistAlbums/{{song.ArtistID}}'>View Artist</a></td>
                     <td><a href=''></a></td>
                 </tr>
             {% endfor %}
