why is this case sensitive :(

--- a/Connection/templates/Search2.html
+++ b/Connection/templates/Search2.html
@@ -126,7 +126,7 @@ a:hover {
                     <td>{{ tip.ArtistName }}</td>
                     <td>{{ tip.AlbumName }}</td>
                     <td>{{ tip.Genre }}</td>
-                    <td>{{ tip.length }}</td>
+                    <td>{{ tip.Length }}</td>
                     <td><a href='albumView/{{tip.AlbumID}}'> View Album</a> </td>
                     <td><a href='artistAlbums/{{tip.ArtistID}}'> View Artist</a> </td>
                     
