the solar express

--- a/Connection/templates/AlbumView.html
+++ b/Connection/templates/AlbumView.html
@@ -87,6 +87,9 @@
 
 
 <body>
+	{% if cr|length > 0 %}
+		<h1>Playlist: {{cr[0].AlbumName}}</h1>
+	{%endif%}
     <table class="table">
         <thead>
             <tr>
