Fixing many errors

--- a/Connection/templates/AddPlaylist.html
+++ b/Connection/templates/AddPlaylist.html
@@ -17,8 +17,8 @@
             <input type="text" class="form-control" name="PlaylistName" id="PlaylistName" >
         </div>
 
-        <button type="btnAdd" class="btn btn-primary">Submit</button>
-        <a href="/list" class="btn btn-primary">Cancel</a>
+        <button type="btnAdd" class="btn btn-primary">SUBMIT</button>
+        <button><a href="/list" class="btn btn-primary">RETURN</a></button>
       </form>
 </body>
 </html>
