--- a/Connection/templates/AdminAddAlbum.html
+++ b/Connection/templates/AdminAddAlbum.html
@@ -26,7 +26,7 @@
             <input type="text" class="form-control" name="ArtistName" id="ArtistName" required>
     
             <button type="btnAdd" class="btn btn-primary">Add</button>
-            <button onclick="location.href='/'">Return</button>
+            <button onclick="location.href='/AdminPage'">Return</button>
         </form>
     </div>
 
