--- a/Connection/templates/Search.html
+++ b/Connection/templates/Search.html
@@ -100,7 +100,7 @@ a:hover {
         </div>
 
         <button type="search" class="btn btn-primary">Search</button>
-        <a href="/list" class="btn btn-primary">Cancel</a>
+        <a href="/songManage/{{id}}" class="btn btn-primary">Cancel</a>
       </form>
 
       <table class="table">
