--- a/Connection/templates/SimilarSongs.html
+++ b/Connection/templates/SimilarSongs.html
@@ -91,6 +91,9 @@ a:hover {
     
     <h2>Similar Songs</h2>
 
+    <a href="/songManage/{{id}}" class="btn btn-primary">RETURN</a>
+
+
       <table class="table">
         <thead>
             <tr>
