--- a/Connection/templates/SongList.html
+++ b/Connection/templates/SongList.html
@@ -113,6 +113,6 @@
     </table>
    <button><a href="/search/{{play}}">ADD SONG</a></button>
    <button><a href="/suggestedSongs/{{play}}">SEE SUGGESTED SONGS</a></button>
-   <button><a href="/updatePlaylist/{{play}}">CANCEL</a></button>
+   <button><a href="/updatePlaylist/{{play}}">RETURN</a></button>
 
 </body>
