--- a/Connection/templates/SimilarSongs.html
+++ b/Connection/templates/SimilarSongs.html
@@ -115,6 +115,8 @@ a:hover {
                     <td>{{ song.BPM }}</td>
                     <td><a href='/albumView/{{song.AlbumID}}'>View Album</a></td>
                     <td><a href='/artistAlbums/{{song.ArtistID}}'>View Artist</a></td>
+                    <td><a href='addSong/{{id}}/{{song.SongTitle}}'>Add to Playlist</a></td>
+
                     <td><a href=''></a></td>
                 </tr>
             {% endfor %}
